# SynthXEX

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  build.sh  channels.scm  flake.nix  synthxex.nix  synthxex.scm
include/nettle/: README
src/: main.c
src/common/: common.c  common.h  crypto.h  datastorage.c  datastorage.h
src/getdata/: getdata.c  getdata.h  gethdrdata.c  gethdrdata.h  getimports.c  getimports.h
src/pemapper/: pemapper.c  pemapper.h
src/placer/: placer.c  placer.h
src/setdata/: elimzeroes.c  elimzeroes.h  optheaders.c  optheaders.h  pagedescriptors.c  pagedescriptors.h  populateheaders.c  populateheaders.h
src/write/: headerhash.c  headerhash.h  writexex.c  writexex.h
